--- a/pom.xml
+++ b/pom.xml
@@ -321,7 +321,7 @@
             <configuration>  
                 <webAppSourceDirectory>src/main/webapp</webAppSourceDirectory>  
                 <scanIntervalSeconds>3</scanIntervalSeconds>  
-                <contextPath>/</contextPath>  
+                <contextPath>/13260Exam</contextPath>  
                 <connectors>  
                     <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">  
                         <port>8088</port>  
