--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,9 +37,9 @@
     </servlet-mapping>
     
     
-    <!-- 日志记录 -->
+    <!-- 日志记录 
     <context-param>
-        <!-- 日志配置文件路径 -->
+     日志配置文件路径
         <param-name>log4jConfigLocation</param-name>
         <param-value>classpath:conf/log4j.properties</param-value>
     </context-param>
@@ -47,6 +47,6 @@
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
-
+-->
  
 </web-app>
